# gemini

./: .gitignore  Cargo.toml  README.md
src/: app.rs  config.rs  demo.rs  gemini.rs  gemini_tests.rs  main.rs  ui.rs
